--- a/static/tasks.html
+++ b/static/tasks.html
@@ -10,25 +10,27 @@
 </head>
 
 <body class="bg-dark">
-
     <nav id="menu" class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     </nav>
 
     <main id="main" class="container-fluid" role="main" style="position: absolute; top: 75px;">
-        <table id="containerTable" class="table table-dark table-condensed table-sm table-hover table-striped">
+        <table id="tasksTable" class="table table-dark table-condensed table-sm table-hover table-striped">
             <thead class="thead-dark">
                 <tr id="tableHead">
-                    <th>
-
-                    </th>
+                    <th style="width: 200px;">Timestamp</th>
+                    <th style="width: 150px;">State</th>
+                    <th style="width: 150px;">DesiredState</th>
+                    <th style="width: 200px;">Node</th>
+                    <th>Servicename</th>
                 </tr>
             </thead>
             <tbody id="tableBody">
             </tbody>
         </table>
     </main>
+
     <img id="background-image" src="/static/docker.png" />
-    <script src="/static/scripts.js"></script>
+    <script src="/static/tasksScripts.js"></script>
     <script type="text/javascript">$('#menu').load('/static/menu.html');</script>
 </body>
 
