node or service can be null

--- a/static/tasks.html
+++ b/static/tasks.html
@@ -18,10 +18,11 @@
             <thead class="thead-dark">
                 <tr id="tableHead">
                     <th style="width: 200px;">Timestamp</th>
-                    <th style="width: 150px;">State</th>
-                    <th style="width: 150px;">DesiredState</th>
-                    <th style="width: 200px;">Node</th>
+                    <th style="width: 100px;">State</th>
+                    <th style="width: 120px;">DesiredState</th>
                     <th>Servicename</th>
+                    <th style="width: 200px;">Node</th>
+                    <th>Error</th>
                 </tr>
             </thead>
             <tbody id="tableBody">
